--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,6 +3,10 @@ NotBlank={0} é obrigatório
 NotNull={0} é obrigatório
 PositiveOrZero={0} deve ser um valor maior ou igual a zero
 
+#javax.validation.constraints.PositiveOrZero.message=deve ser um valor positivo
+
+#TaxaFrete.invalida=Valor deve ser positivo aaaaaaaaaaaaaa
+
 # Cozinha
 cozinha.nome=Nome da cozinha
 cozinha.id=Código da cozinha
