--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,7 +5,7 @@ PositiveOrZero={0} deve ser um valor maior ou igual a zero
 
 #javax.validation.constraints.PositiveOrZero.message=deve ser um valor positivo
 
-#TaxaFrete.invalida=Valor deve ser positivo aaaaaaaaaaaaaa
+TaxaFrete.invalida={0} Valor deve ser positivo aaaaaaaaaaaaaa
 
 # Cozinha
 cozinha.nome=Nome da cozinha
