ajustando exception handler para adicionar mensagens de validação em nível de classe

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,6 +4,8 @@ NotNull={0} é obrigatório
 PositiveOrZero={0} deve ser um valor maior ou igual a zero
 Multiplo={0} deve ser um valor múltiplo de {1}. Essa validação foi feita para fins didáticos
 
+ValorZeroIncluiDescricao=Para {3} Zero, inclua descrição {2} no {1} 
+
 #javax.validation.constraints.PositiveOrZero.message=deve ser um valor positivo
 
 TaxaFrete.invalida={0} Valor deve ser positivo aaaaaaaaaaaaaa
